# OSMeili

./: Cargo.toml  LICENSE  Readme.md
benches/: osm.rs
src/: filter.rs  geo.rs  importer.rs  main.rs  settings.rs
src/lib/: filter.rs  geo.rs  items.rs  mod.rs  output.rs
tests/: integration_test.rs
