[package]
name = "osm_pbf2json"
version = "0.3.0"
authors = ["magnus kulke <mkulke@gmail.com>", "edouard poitras <edouardpoitras@gmail.com>"]
edition = "2021"
homepage = "https://github.com/mkulke/osm-pbf2json"
readme = "Readme.md"
repository = "https://github.com/mkulke/osm-pbf2json"
license = "MIT"
keywords = ["osm", "openstreetmap", "geo", "pbf"]
categories = ["command-line-utilities", "encoding", "parsing", "science"]
description = "A parser/filter/processor for OSM protobuf bundles"

[dependencies]
clap = { version = "4.4", features = ["env", "derive"] }
futures = "0.3"
geo = "0.27"
geo-types = "0.7"
itertools = "0.12"
meilisearch-sdk = "0.24"
osmpbfreader = "0.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
geojson = "0.24"

[build-dependencies]
protobuf-codegen-pure = "2.28"

[[bench]]
name = "osm"
harness = false

[lib]
name = "osm_pbf2json"
path = "src/lib/mod.rs"

[[bin]]
name = "osm_pbf2json"
path = "src/main.rs"
test = false
