[package]
name = "osm_meili"
version = "0.1.0"
authors = ["alexander oberlaender <curtisy@mailbox.org>, magnus kulke <mkulke@gmail.com>", "edouard poitras <edouardpoitras@gmail.com>"]
edition = "2021"
homepage = "https://github.com/curtisy1/OSMeili"
readme = "Readme.md"
repository = "https://github.com/curtisy1/OSMeili"
license = "MIT"
keywords = ["osm", "openstreetmap", "geocoding", "pbf"]
categories = ["science::geo"]
description = "A (reverse-)geocoder backed by meilisearch"

[dependencies]
clap = { version = "4.4", features = ["env", "derive"] }
futures = "0.3"
geo = "0.27"
geo-types = "0.7"
itertools = "0.12"
meilisearch-sdk = "0.24"
osm-io = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
criterion = "0.5"
geojson = "0.24"

[build-dependencies]
protobuf-codegen-pure = "2.28"

[[bin]]
name = "osm_meili"
path = "src/main.rs"
test = false
